# mvt-parser

mvt/: pyproject.toml
mvt/parsers/: data.py
mvt/schemas/: data.py
