[tool.poetry]
name = "mvt-parser"
version = "0.1.0"
description = "Mvt Parser"
authors = ["adriyansyahmf <adriyansyahmf0@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
